--- a/processing/EventStore.Shop.Sales.Adapter/EventStore.Shop.Sales.Adapter.csproj
+++ b/processing/EventStore.Shop.Sales.Adapter/EventStore.Shop.Sales.Adapter.csproj
@@ -9,6 +9,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EventStore.Client" Version="4.1.1" />
+    <PackageReference Include="Microsoft.Csharp" Version="4.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EventStore.Shop.Sales\EventStore.Shop.Sales.csproj" />
   </ItemGroup>
 
