Implementing message handling (wip)

--- a/processing/EventStore.Shop.Sales.Adapter/EventStore.Shop.Sales.Adapter.csproj
+++ b/processing/EventStore.Shop.Sales.Adapter/EventStore.Shop.Sales.Adapter.csproj
@@ -5,13 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Mappings\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="EventStore.Client" Version="4.1.1" />
     <PackageReference Include="Microsoft.Csharp" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="nlog" Version="4.5.11" />
   </ItemGroup>
 
   <ItemGroup>
